--- a/_templates/global/Page.html
+++ b/_templates/global/Page.html
@@ -50,12 +50,13 @@
 
       .dialogue {
         z-index: 9999;
-        width: 95%;
-        height: 95%;
+        width: 98%;
+        height: 98%;
         max-width: 100%;
         max-height: 100%;
         position: absolute;
-        background: rgba(256,256,256,.9);
+        top: 1%;
+        background: rgba(256,256,256,1);
       }
 
       .dialogue p {
